fixes inline layout bug on on rh-accordion accents

--- a/elements/rh-accordion/rh-accordion-header.css
+++ b/elements/rh-accordion/rh-accordion-header.css
@@ -116,6 +116,10 @@ span {
   gap: var(--rh-space-md, 8px);
 }
 
+#header-container .inline {
+  flex-direction: row;
+}
+
 [part="accents"] {
   display: flex;
   flex-wrap: wrap;
